[project]
name = "agent-1"
version = "0.1.0"
description = ""
authors = [
    {name = "AmaN",email = "webdevaman2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph (>=0.5.1,<0.6.0)",
    "langsmith (>=0.4.4,<0.5.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
